[gd_scene load_steps=2 format=3 uid="uid://skcv73i17tim"]

[ext_resource type="Script" uid="uid://cnl6vjfli70k7" path="res://MainMenu.gd" id="1_i26rj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_i26rj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BtnJogar" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnSair" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnRanking" type="Button" parent="VBoxContainer"]
layout_mode = 2
